--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config: [Release]
-        platform: [Win32, x64]
+        platform: [ x64 ]
     
     steps:
     - uses: actions/checkout@v3
